--- a/index.html
+++ b/index.html
@@ -178,41 +178,42 @@
 							<div class="features">
 								<section>
 									<span class="icon major fa-map"></span>
-									<h3>María Manjárrez, President</h3>
+									<h3>Tommy Nguyen, President</h3>
 									<img style = "width: 50%; height: auto" src= "images/Maria2.jpg")/></a>
-									<p>María Fernanda Manjárrez is a junior double majoring in Political Science and Public Policy and Law. María has been involved with the Institute since she was 15 years old when she attended the annual Young Women’s Leadership Conference. She is deeply humbled and honored to serve as the President of Unruh Associates for 2019. On campus, Maria is also a member of the Phi Alpha Delta Pre-Law fraternity and a Norman Topping Student Aid Fund Scholar. Maria Fernanda has previously interned for Hispanas Organized for Political Equality, D-33 Congressman Ted W. Lieu, and has done research with the Skid Row Housing Trust through POSC 395. María is passionate about increased access to higher education, so she was appointed by Governor Brown to serve as a Commissioner on the California Student Aid Commission. After graduating from USC, she plans on attending law school and pursuing a career in public service.
+									<p>Tommy Nguyen is a junior double majoring in History and International Relations. Tommy has been with Unruh Associates since his freshman year and is deeply humbled and honored to serve as the President of Unruh Associates for 2020. On campus, Tommy is also a Dornsife Ambassador, Warren Bennis Fellow, VIce President of the USC History Union, and a teacher for the Prison Education Project. Tommy is also Leonard D. Schaffer Fellow and is interning with Senator Holly J. Mitchell. Tommy is passionate about progressing higher education and society through education programs and policy making. After college, Tommy plans to attend law school and pursue a career in education, public service, or in the Intelligence Community. 
+
 									</p>
 								</section>
 								<section>
 									<span class="icon major fa-binoculars"></span>
-									<h3>José Gutiérrez, Vice President</h3>
+									<h3>Deven Patel, Vice President</h3>
 									<img style = "width: 50%; height: auto" src= "images/Jose2.jpg")/></a>
-									<p>José Guillermo Gutiérrez is a rising senior from Mexico City and a Political Science and Philosophy double major. On campus, he is a member of Society 53 and a Warren Bennis Scholar. Previously, he was the Director of Student Safety and an Advocacy Delegate at Undergraduate Student Government, as well as teaching Action Civics at a local charter school through the Unruh Institute’s Building Future Leader’s Program. José has interned at Fundación Baillères, Mayor Eric Garcetti’s Office of International Affairs as a Leonard D. Schaeffer Fellow, Fundación Proempleo, Korn/Ferry International in Mexico City, and did research for Council Member Krekorian through POSC 395.
-									</p>
+									<p>
+							  		</p>
 								</section>
 								<section>
 									<span class="icon major fa-users"></span>
-									<h3>Ayojide Hospidales, Director of Programming</h3>
+									<h3>Jillian Fallon, Director of Programming</h3>
 									<img style = "width: 50%; height: auto" src= "images/Jide3.jpg")/></a>
-									<p>Ayojide Hospidales is a sophomore majoring in Political Science. As a political junky, Ayojide's passion is molding students to make them more civically engaged. He has volunteered at VoteSC and the Center for Black Students Affairs. In the future, he hopes to become a government attorney and judge, for which he has received great counsel on this path as he is currently mentored by Judge Bobbi Tillmon as part of the Legacy Through Leadership Mentorship Program.</p>
+									<p>Jillian Fallon is a sophomore studying Political Science and Public Relations with a minor in Spanish. She serves as the Programming Director of Unruh Associates and is the Executive Director of the Political Student Assembly. Her focus on politics at USC creates a platform that is open to discussion and provides everyone an opportunity to take part in making change. With so many positive political experiences on campus, she hopes to provide others with the same, and give them the resources they need to get educated on politics! </p>
 								</section>
 								<section>
 									<span class="icon major fa-desktop"></span>
-									<h3>Deven Patel, Director of Publicity</h3>
+									<h3>Chloe Hirth, Director of Publicity</h3>
 									<img style = "width: 50%; height: auto" src= "images/Deven2.jpg")/></a>
-									<p>Deven Patel is a sophomore from Irvine, CA, majoring in Environmental Studies with a concentration in Public Policy. He is involved at the Novus Think Tank, Undergraduate Student Government, and Dornsife Ambassadors.He is also a member of the Thematic Option Honors Program. His love for politics stemmed from following the 2016 election, and shortly after, interning with a City Council Member from Irvine.</p>
+									<p>Chloe Hirth is a junior majoring in Political Science and Communications on the Pre-Law track. She has been a member of Unruh Associates since her sophomore year and is greatly excited to serve as the Director of Publicity for 2020. On campus, Chloe is a member of the Corporate Law and Financial Regulation Association and Alpha Phi Sorority, serving on the executive boards of both organizations. She is also a member of Dornsife Ambassadors and SPEC Magazine. Chloe is currently interning at The Borgen Project and the State Controller’s Office. She plans to attend law school after graduating from USC.</p>
 								</section>
 								<section>
 									<span class="icon major fa-pencil"></span>
-									<h3>Lee Fisher, Administrator</h3>
+									<h3>Maggie Tewksbury, Administrator</h3>
 									<img style = "width: 50%; height: auto" src= "images/Lee2.jpg")/></a>
 									<p>Lee Fisher is a rising junior studying Political Science and Music Industry with an emphasis in Pre-Law. She is originally from the San Francisco Bay Area and she can't stop talking about it. At USC, she is the Assistant Director for the Political Student Assembly, Vice President for College Democrats, a member of PAWS (Providing Animals With Shelter), and a member of Phi Alpha Delta, the university's first and only pre-law professional fraternity. Lee has interned at the San Francisco office of U.S. Senator Kamala D. Harris and is an active supporter of #Momala2020. This past summer, she interned at Elevate Public Affairs while working at Trial Partners, a jury consulting firm. On campus this year, you can find Lee browsing the selections at the Wednesday farmer's market or, more likely, napping.</p>
 								</section>
 								<section>
 									<span class="icon major fa-money"></span>
-									<h3>Tommy Nguyen, Director of External Relations</h3>
+									<h3>Hannah Fandacaro, Director of External Relations</h3>
 									<img style = "width: 50%; height: auto" src= "images/Tommy2.jpg")/></a>
-									<p>Tommy Nguyen is a freshman from Irvine, California. He is a double major in History and Psychology, and is interested in pursuing a career in education. He currently serves as the Director of External Relations for the Unruh Associates and is an active member of the  Novus Think Tank and is a delegate for the education committee. Tommy is a delegate for the Undergraduate Student Government in Academic Affairs as well.</p>
+									<p>Hannah Fondacaro is a rising junior majoring in Psychology, double minoring in Forensics & Criminality and Spanish. Hannah has been a member of Unruh Associates since her first semester at USC. Although she’s not pursuing a career in politics, she became passionate about politics after the mass shooting at Marjory Stoneman Douglas High School in Parkland, Florida. On campus, Hannah works as a Research Assistant for the Child Interviewing Lab at the USC Gould School of Law. This summer, Hannah is interning for the Los Angeles District Attorney’s Office, Hardcore Gang Division, and previously interned for the John Jay College of Criminal Justice in Manhattan. After graduating from USC, she plans to attend graduate school and pursue a dual JD-MSW degree.</p>
 								<!--</section>
 								<section>
 									<span class="icon major fa-phone"></span>
