--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 								<section>
 									<span class="icon major fa-map"></span>
 									<h3>Tommy Nguyen, President</h3>
-									<img style = "width: 50%; height: auto" src= "images/Maria2.jpg")/></a>
+									<img style = "width: 50%; height: auto" src= "images/Hannah.jpg")/></a>
 									<p>Tommy Nguyen is a junior double majoring in History and International Relations. Tommy has been with Unruh Associates since his freshman year and is deeply humbled and honored to serve as the President of Unruh Associates for 2020. On campus, Tommy is also a Dornsife Ambassador, Warren Bennis Fellow, VIce President of the USC History Union, and a teacher for the Prison Education Project. Tommy is also Leonard D. Schaffer Fellow and is interning with Senator Holly J. Mitchell. Tommy is passionate about progressing higher education and society through education programs and policy making. After college, Tommy plans to attend law school and pursue a career in education, public service, or in the Intelligence Community. 
 
 									</p>
