--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 								<section>
 									<span class="icon major fa-desktop"></span>
 									<h3>Chloe Hirth, Director of Publicity</h3>
-									<img style = "width: 50%; height: auto" src= "images/Deven2.jpg")/></a>
+									<img style = "width: 50%; height: auto" src= "images/Chloe.jpg")/></a>
 									<p>Chloe Hirth is a junior majoring in Political Science and Communications on the Pre-Law track. She has been a member of Unruh Associates since her sophomore year and is greatly excited to serve as the Director of Publicity for 2020. On campus, Chloe is a member of the Corporate Law and Financial Regulation Association and Alpha Phi Sorority, serving on the executive boards of both organizations. She is also a member of Dornsife Ambassadors and SPEC Magazine. Chloe is currently interning at The Borgen Project and the State Controller’s Office. She plans to attend law school after graduating from USC.</p>
 								</section>
 								<section>
@@ -212,7 +212,7 @@
 								<section>
 									<span class="icon major fa-money"></span>
 									<h3>Hannah Fandacaro, Director of External Relations</h3>
-									<img style = "width: 50%; height: auto" src= "images/Tommy2.jpg")/></a>
+									<img style = "width: 50%; height: auto" src= "images/hannah.jpg")/></a>
 									<p>Hannah Fondacaro is a rising junior majoring in Psychology, double minoring in Forensics & Criminality and Spanish. Hannah has been a member of Unruh Associates since her first semester at USC. Although she’s not pursuing a career in politics, she became passionate about politics after the mass shooting at Marjory Stoneman Douglas High School in Parkland, Florida. On campus, Hannah works as a Research Assistant for the Child Interviewing Lab at the USC Gould School of Law. This summer, Hannah is interning for the Los Angeles District Attorney’s Office, Hardcore Gang Division, and previously interned for the John Jay College of Criminal Justice in Manhattan. After graduating from USC, she plans to attend graduate school and pursue a dual JD-MSW degree.</p>
 								<!--</section>
 								<section>
