--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 								<section>
 									<span class="icon major fa-users"></span>
 									<h3>Jillian Fallon, Director of Programming</h3>
-									<img style = "width: 50%; height: auto" src= "images/Jide3.jpg")/></a>
+									<img style = "width: 50%; height: auto" src= "images/jillian.jpg")/></a>
 									<p>Jillian Fallon is a sophomore studying Political Science and Public Relations with a minor in Spanish. She serves as the Programming Director of Unruh Associates and is the Executive Director of the Political Student Assembly. Her focus on politics at USC creates a platform that is open to discussion and provides everyone an opportunity to take part in making change. With so many positive political experiences on campus, she hopes to provide others with the same, and give them the resources they need to get educated on politics! </p>
 								</section>
 								<section>
