--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 								<section>
 									<span class="icon major fa-binoculars"></span>
 									<h3>Deven Patel, Vice President</h3>
-									<img style = "width: 50%; height: auto" src= "images/Jose2.jpg")/></a>
+									<img style = "width: 50%; height: auto" src= "images/Deven.jpg")/></a>
 									<p>Deven Patel is a junior from Irvine, CA, double majoring in Business Administration and Environmental Studies with a concentration in Public Policy. On campus, Deven is the president of Business Technology Group and an Ambassador for the USC Dornsife Office of Admission. He also has previously served as a Sustainability Delegate in Undergraduate Student Government and is a member of the Thematic Option Honors Program. Deven has interned with the City of Irvine under Councilwoman Melissa Fox, working specifically in the area of environmental policy for the city. In summer 2019, he worked as a campaign research intern for Melissa Fox for CA AD-68. This summer, Deven was a Marketing and Public Relations intern at Vyten Career Coaching. Deven has been active with the Center for the Political Future since his freshman year. He has taken a Political Fellows course with Symone Sanders, Senior Adviser to Joe Biden 2020, and attended the Cerrell Political Leadership Summit in February 2020.
 							  		</p>
 								</section>
@@ -206,7 +206,7 @@
 								<section>
 									<span class="icon major fa-pencil"></span>
 									<h3>Maggie Tewksbury, Administrator</h3>
-									<img style = "width: 50%; height: auto" src= "images/Lee2.jpg")/></a>
+									<img style = "width: 50%; height: auto" src= "images/Maggie.jpg")/></a>
 									<p>Lee Fisher is a rising junior studying Political Science and Music Industry with an emphasis in Pre-Law. She is originally from the San Francisco Bay Area and she can't stop talking about it. At USC, she is the Assistant Director for the Political Student Assembly, Vice President for College Democrats, a member of PAWS (Providing Animals With Shelter), and a member of Phi Alpha Delta, the university's first and only pre-law professional fraternity. Lee has interned at the San Francisco office of U.S. Senator Kamala D. Harris and is an active supporter of #Momala2020. This past summer, she interned at Elevate Public Affairs while working at Trial Partners, a jury consulting firm. On campus this year, you can find Lee browsing the selections at the Wednesday farmer's market or, more likely, napping.</p>
 								</section>
 								<section>
