--- a/index.html
+++ b/index.html
@@ -187,32 +187,32 @@
 								<section>
 									<span class="icon major fa-binoculars"></span>
 									<h3>Deven Patel, Vice President</h3>
-									<img style = "width: 50%; height: auto" src= "images/Deven.jpg")/></a>
+									<img style = "width: 50%; height: auto" src= "images/Deven.jpeg")/></a>
 									<p>Deven Patel is a junior from Irvine, CA, double majoring in Business Administration and Environmental Studies with a concentration in Public Policy. On campus, Deven is the president of Business Technology Group and an Ambassador for the USC Dornsife Office of Admission. He also has previously served as a Sustainability Delegate in Undergraduate Student Government and is a member of the Thematic Option Honors Program. Deven has interned with the City of Irvine under Councilwoman Melissa Fox, working specifically in the area of environmental policy for the city. In summer 2019, he worked as a campaign research intern for Melissa Fox for CA AD-68. This summer, Deven was a Marketing and Public Relations intern at Vyten Career Coaching. Deven has been active with the Center for the Political Future since his freshman year. He has taken a Political Fellows course with Symone Sanders, Senior Adviser to Joe Biden 2020, and attended the Cerrell Political Leadership Summit in February 2020.
 							  		</p>
 								</section>
 								<section>
 									<span class="icon major fa-users"></span>
 									<h3>Jillian Fallon, Director of Programming</h3>
-									<img style = "width: 50%; height: auto" src= "images/jillian.jpg")/></a>
+									<img style = "width: 50%; height: auto" src= "images/Jillian.jpg")/></a>
 									<p>Jillian Fallon is a sophomore studying Political Science and Public Relations with a minor in Spanish. She serves as the Programming Director of Unruh Associates and is the Executive Director of the Political Student Assembly. Her focus on politics at USC creates a platform that is open to discussion and provides everyone an opportunity to take part in making change. With so many positive political experiences on campus, she hopes to provide others with the same, and give them the resources they need to get educated on politics! </p>
 								</section>
 								<section>
 									<span class="icon major fa-desktop"></span>
 									<h3>Chloe Hirth, Director of Publicity</h3>
-									<img style = "width: 50%; height: auto" src= "images/Chloe.jpg")/></a>
+									<img style = "width: 50%; height: auto" src= "images/Chloe.jpeg")/></a>
 									<p>Chloe Hirth is a junior majoring in Political Science and Communications on the Pre-Law track. She has been a member of Unruh Associates since her sophomore year and is greatly excited to serve as the Director of Publicity for 2020. On campus, Chloe is a member of the Corporate Law and Financial Regulation Association and Alpha Phi Sorority, serving on the executive boards of both organizations. She is also a member of Dornsife Ambassadors and SPEC Magazine. Chloe is currently interning at The Borgen Project and the State Controller’s Office. She plans to attend law school after graduating from USC.</p>
 								</section>
 								<section>
 									<span class="icon major fa-pencil"></span>
 									<h3>Maggie Tewksbury, Administrator</h3>
-									<img style = "width: 50%; height: auto" src= "images/Maggie.jpg")/></a>
+									<img style = "width: 50%; height: auto" src= "images/Maggie.jpeg")/></a>
 									<p>Lee Fisher is a rising junior studying Political Science and Music Industry with an emphasis in Pre-Law. She is originally from the San Francisco Bay Area and she can't stop talking about it. At USC, she is the Assistant Director for the Political Student Assembly, Vice President for College Democrats, a member of PAWS (Providing Animals With Shelter), and a member of Phi Alpha Delta, the university's first and only pre-law professional fraternity. Lee has interned at the San Francisco office of U.S. Senator Kamala D. Harris and is an active supporter of #Momala2020. This past summer, she interned at Elevate Public Affairs while working at Trial Partners, a jury consulting firm. On campus this year, you can find Lee browsing the selections at the Wednesday farmer's market or, more likely, napping.</p>
 								</section>
 								<section>
 									<span class="icon major fa-money"></span>
 									<h3>Hannah Fandacaro, Director of External Relations</h3>
-									<img style = "width: 50%; height: auto" src= "images/hannah.jpg")/></a>
+									<img style = "width: 50%; height: auto" src= "images/Hannah.jpg")/></a>
 									<p>Hannah Fondacaro is a rising junior majoring in Psychology, double minoring in Forensics & Criminality and Spanish. Hannah has been a member of Unruh Associates since her first semester at USC. Although she’s not pursuing a career in politics, she became passionate about politics after the mass shooting at Marjory Stoneman Douglas High School in Parkland, Florida. On campus, Hannah works as a Research Assistant for the Child Interviewing Lab at the USC Gould School of Law. This summer, Hannah is interning for the Los Angeles District Attorney’s Office, Hardcore Gang Division, and previously interned for the John Jay College of Criminal Justice in Manhattan. After graduating from USC, she plans to attend graduate school and pursue a dual JD-MSW degree.</p>
 								<!--</section>
 								<section>
