--- a/index.html
+++ b/index.html
@@ -194,19 +194,19 @@
 								<section>
 									<span class="icon major fa-users"></span>
 									<h3>Jillian Fallon, Director of Programming</h3>
-									<img style = "width: 50%; height: auto" src= "images/Jillian.jpg")/></a>
+									<img style = "width: 50%; height: auto" src= "images/Jillian.jpeg")/></a>
 									<p>Jillian Fallon is a sophomore studying Political Science and Public Relations with a minor in Spanish. She serves as the Programming Director of Unruh Associates and is the Executive Director of the Political Student Assembly. Her focus on politics at USC creates a platform that is open to discussion and provides everyone an opportunity to take part in making change. With so many positive political experiences on campus, she hopes to provide others with the same, and give them the resources they need to get educated on politics! </p>
 								</section>
 								<section>
 									<span class="icon major fa-desktop"></span>
 									<h3>Chloe Hirth, Director of Publicity</h3>
-									<img style = "width: 50%; height: auto" src= "images/Chloe.jpg")/></a>
+									<img style = "width: 50%; height: auto" src= "images/Chloe.jpeg")/></a>
 									<p>Chloe Hirth is a junior majoring in Political Science and Communications on the Pre-Law track. She has been a member of Unruh Associates since her sophomore year and is greatly excited to serve as the Director of Publicity for 2020. On campus, Chloe is a member of the Corporate Law and Financial Regulation Association and Alpha Phi Sorority, serving on the executive boards of both organizations. She is also a member of Dornsife Ambassadors and SPEC Magazine. Chloe is currently interning at The Borgen Project and the State Controller’s Office. She plans to attend law school after graduating from USC.</p>
 								</section>
 								<section>
 									<span class="icon major fa-pencil"></span>
 									<h3>Maggie Tewksbury, Administrator</h3>
-									<img style = "width: 50%; height: auto" src= "images/Maggie.jpeg")/></a>
+									<img style = "width: 50%; height: auto" src= "images/Maggie.jpg")/></a>
 									<p>Lee Fisher is a rising junior studying Political Science and Music Industry with an emphasis in Pre-Law. She is originally from the San Francisco Bay Area and she can't stop talking about it. At USC, she is the Assistant Director for the Political Student Assembly, Vice President for College Democrats, a member of PAWS (Providing Animals With Shelter), and a member of Phi Alpha Delta, the university's first and only pre-law professional fraternity. Lee has interned at the San Francisco office of U.S. Senator Kamala D. Harris and is an active supporter of #Momala2020. This past summer, she interned at Elevate Public Affairs while working at Trial Partners, a jury consulting firm. On campus this year, you can find Lee browsing the selections at the Wednesday farmer's market or, more likely, napping.</p>
 								</section>
 								<section>
