--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 								<section>
 									<span class="icon major fa-money"></span>
 									<h3>Hannah Fandacaro, Director of External Relations</h3>
-									<img style = "width: 50%; height: auto" src= "images/Hannah.jpg")/></a>
+									<img style = "width: 50%; height: 50%" src= "images/Hannah.jpg")/></a>
 									<p>Hannah Fondacaro is a rising junior majoring in Psychology, double minoring in Forensics & Criminality and Spanish. Hannah has been a member of Unruh Associates since her first semester at USC. Although she’s not pursuing a career in politics, she became passionate about politics after the mass shooting at Marjory Stoneman Douglas High School in Parkland, Florida. On campus, Hannah works as a Research Assistant for the Child Interviewing Lab at the USC Gould School of Law. This summer, Hannah is interning for the Los Angeles District Attorney’s Office, Hardcore Gang Division, and previously interned for the John Jay College of Criminal Justice in Manhattan. After graduating from USC, she plans to attend graduate school and pursue a dual JD-MSW degree.</p>
 								<!--</section>
 								<section>
