--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 								<section>
 									<span class="icon major fa-binoculars"></span>
 									<h3>Deven Patel, Vice President</h3>
-									<img style = "width: 50%; height: 50%" src= "images/Deven.jpeg")/></a>
+									<img style = "width: auto; height: auto" src= "images/Deven.jpeg")/></a>
 									<p>Deven Patel is a junior from Irvine, CA, double majoring in Business Administration and Environmental Studies with a concentration in Public Policy. On campus, Deven is the president of Business Technology Group and an Ambassador for the USC Dornsife Office of Admission. He also has previously served as a Sustainability Delegate in Undergraduate Student Government and is a member of the Thematic Option Honors Program. Deven has interned with the City of Irvine under Councilwoman Melissa Fox, working specifically in the area of environmental policy for the city. In summer 2019, he worked as a campaign research intern for Melissa Fox for CA AD-68. This summer, Deven was a Marketing and Public Relations intern at Vyten Career Coaching. Deven has been active with the Center for the Political Future since his freshman year. He has taken a Political Fellows course with Symone Sanders, Senior Adviser to Joe Biden 2020, and attended the Cerrell Political Leadership Summit in February 2020.
 							  		</p>
 								</section>
@@ -212,7 +212,7 @@
 								<section>
 									<span class="icon major fa-money"></span>
 									<h3>Hannah Fandacaro, Director of External Relations</h3>
-									<img style = "width: 60%; height: 30%" src= "images/Hannah.jpg")/></a>
+									<img style = "width: 65%; height: 30%" src= "images/Hannah.jpg")/></a>
 									<p>Hannah Fondacaro is a rising junior majoring in Psychology, double minoring in Forensics & Criminality and Spanish. Hannah has been a member of Unruh Associates since her first semester at USC. Although she’s not pursuing a career in politics, she became passionate about politics after the mass shooting at Marjory Stoneman Douglas High School in Parkland, Florida. On campus, Hannah works as a Research Assistant for the Child Interviewing Lab at the USC Gould School of Law. This summer, Hannah is interning for the Los Angeles District Attorney’s Office, Hardcore Gang Division, and previously interned for the John Jay College of Criminal Justice in Manhattan. After graduating from USC, she plans to attend graduate school and pursue a dual JD-MSW degree.</p>
 								<!--</section>
 								<section>
