--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 								<section>
 									<span class="icon major fa-binoculars"></span>
 									<h3>Deven Patel, Vice President</h3>
-									<img style = "width: auto; height: auto" src= "images/Deven.jpeg")/></a>
+									<img style = "width: 65%; height: 30%" src= "images/Deven.jpeg")/></a>
 									<p>Deven Patel is a junior from Irvine, CA, double majoring in Business Administration and Environmental Studies with a concentration in Public Policy. On campus, Deven is the president of Business Technology Group and an Ambassador for the USC Dornsife Office of Admission. He also has previously served as a Sustainability Delegate in Undergraduate Student Government and is a member of the Thematic Option Honors Program. Deven has interned with the City of Irvine under Councilwoman Melissa Fox, working specifically in the area of environmental policy for the city. In summer 2019, he worked as a campaign research intern for Melissa Fox for CA AD-68. This summer, Deven was a Marketing and Public Relations intern at Vyten Career Coaching. Deven has been active with the Center for the Political Future since his freshman year. He has taken a Political Fellows course with Symone Sanders, Senior Adviser to Joe Biden 2020, and attended the Cerrell Political Leadership Summit in February 2020.
 							  		</p>
 								</section>
