--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 									<span class="icon major fa-binoculars"></span>
 									<h3>Deven Patel, Vice President</h3>
 									<img style = "width: 85%; height: 30%" src= "images/Deven.jpeg")/></a>
-									<p>Deven Patel is a junior from Irvine, CA, double majoring in Business Administration and Environmental Studies with a concentration in Public Policy. On campus, Deven is the president of Business Technology Group and an Ambassador for the USC Dornsife Office of Admission. He is a member of the Thematic Option Honors Program. Deven has interned with the City of Irvine under Councilwoman Melissa Fox, working specifically in the area of environmental policy for the city. In summer 2019, he worked as a campaign research intern for Melissa Fox for CA AD-68. This summer, Deven was a Marketing and Public Relations intern at Vyten Career Coaching. Deven has been active with the Center for the Political Future since his freshman year. He has taken a Political Fellows course with Symone Sanders, Senior Adviser to Joe Biden 2020, and attended the Cerrell Political Leadership Summit in February 2020.
+									<p>Deven Patel is a junior from Irvine, CA, double majoring in Business Administration and Environmental Studies with a concentration in Public Policy. On campus, Deven is the president of Business Technology Group and an Ambassador for the USC Dornsife Office of Admission. He is a member of the Thematic Option Honors Program. Deven has interned with the City of Irvine under Councilwoman Melissa Fox, working specifically in the area of environmental policy for the city. In summer 2019, he worked as a campaign research intern for Melissa Fox for CA AD-68. Deven has been active with the Center for the Political Future since his freshman year. He has taken a Political Fellows course with Symone Sanders, Senior Adviser to Joe Biden 2020, and attended the Cerrell Political Leadership Summit in February 2020.
 							  		</p>
 								</section>
 								<section>
@@ -200,7 +200,7 @@
 								<section>
 									<span class="icon major fa-desktop"></span>
 									<h3>Chloe Hirth, Director of Publicity</h3>
-									<img style = "width: 90%; height: 36%" src= "images/Chloe.JPG")/></a>
+									<img style = "width: 90%; height: 39%" src= "images/Chloe.JPG")/></a>
 									<p>Chloe Hirth is a junior majoring in Political Science and Communications on the Pre-Law track. She has been a member of Unruh Associates since her sophomore year and is greatly excited to serve as the Director of Publicity for 2020. On campus, Chloe is a member of the Corporate Law and Financial Regulation Association and Alpha Phi Sorority, serving on the executive boards of both organizations. She is also a member of Dornsife Ambassadors and SPEC Magazine. Chloe is currently interning at The Borgen Project and the State Controller’s Office. She plans to attend law school after graduating from USC.</p>
 								</section>
 								<section>
