--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
 							<div class="box alt">
 								<div class="row uniform">
 									<div class="4u"><span class="image fit"><img src="images/pic21.jpg" alt="" /></span></div>
-									<div class="4u"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
+									<div class="4u"><span class="image fit"><img src="Eboard group pic.TIFF" alt="" /></span></div>
 									<div class="4u$"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
 									<div class="4u"><span class="image fit"><img src="images/Group1.jpg" alt="" /></span></div>
-									<div class="4u"><span class="image fit"><img src="images/pic21.jpg" alt="" /></span></div>
+									<div class="4u"><span class="image fit"><img src="images/NowThis.PNG" alt="" /></span></div>
 									<div class="4u$"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
 									<div class="4u"><span class="image fit"><img src="images/pic20.JPG" alt="" /></span></div>
 									<div class="4u"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
@@ -187,7 +187,7 @@
 								<section>
 									<span class="icon major fa-binoculars"></span>
 									<h3>Deven Patel, Vice President</h3>
-									<img style = "width: 85%; height: 29%" src= "images/Deven.jpeg")/></a>
+									<img style = "width: 88%; height: 29%" src= "images/Deven.jpeg")/></a>
 									<p>Deven Patel is a junior from Irvine, CA, double majoring in Business Administration and Environmental Studies with a concentration in Public Policy. On campus, Deven is the president of Business Technology Group and an Ambassador for the USC Dornsife Office of Admission. He is a member of the Thematic Option Honors Program. Deven has interned with the City of Irvine under Councilwoman Melissa Fox, working specifically in the area of environmental policy for the city. In summer 2019, he worked as a campaign research intern for Melissa Fox for CA AD-68. Deven has been active with the Center for the Political Future since his freshman year. He has taken a Political Fellows course with Symone Sanders, Senior Adviser to Joe Biden 2020, and attended the Cerrell Political Leadership Summit.
 							  		</p>
 								</section>
