--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
 							<div class="box alt">
 								<div class="row uniform">
 									<div class="4u"><span class="image fit"><img src="images/pic21.jpg" alt="" /></span></div>
-									<div class="4u"><span class="image fit"><img src="Carol Folt.JPG" alt="" /></span></div>
-									<div class="4u$"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
+									<div class="4u"><span class="image fit"><img src="images/Carol Folt.JPG" alt="" /></span></div>
+									<div class="4u$"><span class="image fit"><img src="images/Eboard group pic.jpg" alt="" /></span></div>
 									<div class="4u"><span class="image fit"><img src="images/Group1.jpg" alt="" /></span></div>
 									<div class="4u"><span class="image fit"><img src="images/NowThis.PNG" alt="" /></span></div>
 									<div class="4u$"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
