--- a/index.html
+++ b/index.html
@@ -293,9 +293,9 @@
 
 							<b>What is the application process?</b>
 
-							<p>(1) You must attend the Unruh Open House in SOS B15 on January 28, 2020 at 5:00 PM. If you cannot attend this event, please reach out to our executive board at <a href="#">unruhassociates@gmail.com</a> and we can accommodate your application.
+							<p>(1) You must attend the Virtual Unruh Institute Open House. If you cannot attend this event, please reach out to our executive board at <a href="#">unruhassociates@gmail.com</a> and we can accommodate your application.
 
-							<br>(2) The written application opens on January 28, 2020 and is due February 2, 2020 at 11:59 PM.
+							<br>(2) The written application opens on August 24, 2020 and is due September 4, 2020 at 11:59 PM.
 
 							<br>(3) Applicants will be notifies of interview dates shortly thereafter.</p>
 
