--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/politics-pastries_symone-2.jpg" alt="" data-position="center center" /></a>
+							<a href="#" class="image"><img src="images/obama.jpeg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>We inspire students to fulfill their political and civic potential...
@@ -98,7 +98,7 @@
 									<div class="4u"><span class="image fit"><img src="images/NowThis.PNG" alt="" /></span></div>
 									<div class="4u$"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
 									<div class="4u"><span class="image fit"><img src="images/pic20.JPG" alt="" /></span></div>
-									<div class="4u"><span class="image fit"><img src="images/obama.jpeg" alt="" /></span></div>
+									<div class="4u"><span class="image fit"><img src="images/politics-pastries_symone-2.jpg" alt="" /></span></div>
 									<div class="4u$"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
 								</div>
 								<br>
